force-app/main/default/objects/clariti__Object_Balance_Settings__mdt/clariti__Object_Balance_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Settings to find out the payable records based on phase and statuses.</description>
    <label>Object Balance Settings</label>
    <pluralLabel>Object Balance Settings</pluralLabel>
</CustomObject>