force-app/main/default/objects/clariti__Object_Balance_Settings__mdt/fields/clariti__Enable_Owner_Criteria__c.field-meta.xml
<CustomField>
    <fullName>clariti__Enable_Owner_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this will query for objects owned by the login user and add the outstanding payables to the total balance outstanding.</description>
    <inlineHelpText>If selected, this will query for objects owned by the login user and add the outstanding payables to the total balance outstanding.</inlineHelpText>
    <label>Enable Owner Criteria</label>
    <type>Checkbox</type>
</CustomField>