force-app/main/default/objects/clariti__Object_Balance_Settings__mdt/fields/clariti__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>clariti__Object_API_Name__c</fullName>
    <description>Specify the API name of the payable object.</description>
    <inlineHelpText>Specify the API name of the payable object.</inlineHelpText>
    <label>Object API Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>