force-app/main/default/objects/clariti__Object_Balance_Settings__mdt/fields/clariti__Phase_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>clariti__Phase_Field_API_Name__c</fullName>
    <description>Specify the API name of the Phase field.</description>
    <inlineHelpText>Specify the API name of the Phase field.</inlineHelpText>
    <label>Phase Field API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>