force-app/main/default/objects/clariti__Object_Balance_Settings__mdt/fields/clariti__Status_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>clariti__Status_Field_API_Name__c</fullName>
    <description>Specify the API name of the Status field.</description>
    <inlineHelpText>Specify the API name of the Status field.</inlineHelpText>
    <label>Status Field API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>